# www.MaterialX

./: CMakeLists.txt  JsMaterialXGenShader.data  JsMaterialXGenShader.js  JsMaterialXGenShader.wasm  rel_build.sh
.github/workflows/: main.yml
javascript/MaterialXTest/: package-lock.json
javascript/MaterialXView/: package-lock.json
python/MaterialX/: colorspace.py  datatype.py  main.py
python/MaterialXTest/: genshader.py  main.py  tests_to_html.py
python/Scripts/: baketextures.py  generateshader.py  genmdl.py  mxdoc.py  mxformat.py  mxgltf.py  mxvalidate.py  translateshader.py  writenodegraphs.py
resources/Geometry/: cpvSphere.gltf  flat_shaderball.glb  flat_shaderball.gltf  shaderball.gltf
resources/Materials/Examples/GltfPbr/: gltf_pbr_boombox.mtlx.gltf  gltf_pbr_boombox.mtlx.json
source/MaterialXGraphEditor/: CMakeLists.txt  Graph.cpp  Main.cpp  RenderView.cpp
source/MaterialXRender/: GltfMaterialHandler.cpp  GltfMaterialHandler.h  GltfMaterialUtil.cpp  GltfMaterialUtill.h
source/MaterialXView/: CMakeLists.txt  Viewer.cpp
source/MaterialXglTF/: CMakeLists.txt  GltfMaterialHandler.cpp  GltfMaterialUtil.cpp
source/PyMaterialX/: CMakeLists.txt
source/PyMaterialX/PyMaterialXRender/: PyGltfMaterialUtil.cpp  PyModule.cpp
source/PyMaterialX/PyMaterialXglTF/: CMakeLists.txt  PyGltfMaterialHandler.cpp  PyGltfMaterialUtil.cpp  PyModule.cpp
